--- a/webapp/app/partials/models/model_schema.html
+++ b/webapp/app/partials/models/model_schema.html
@@ -16,9 +16,12 @@
 * limitations under the License.
 -->
 
-<div class="box box-primary">
+<div class="box box-primary model-design">
     <div class="box-header widget-header-blue widget-header-flat">
         <h4 class="box-title text-info">Model Designer</h4>
+        <div class="box-tools pull-right">
+            <a class="btn btn-box-tool" tooltip="Edit Model" href="models/edit/{{model.name}}" data-widget="collapse"><i class="fa fa-edit"></i></a>
+        </div>
     </div>
     <div class="box-body">
         <ng-form name="design_form" ng-submit="">
@@ -40,13 +43,13 @@
             <hr/>
             <div class="wizard-actions">
                 <div class="row">
-                    <div class="col-xs-8">
+                    <div class="col-xs-8" style="display:none;">
                         <p style="color: #808080;text-align: left;"><b>Note:</b> inputs with <span style="color: lightblue">light blue</span> border are mandatory.</p>
                         <div>
                             <a href="models" class="pull-left"><i class="fa fa-arrow-left"></i> Back to My Models</a>
                         </div>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-4 pull-right">
                         <button class="btn btn-prev" ng-click="preView()" ng-show="curStep.title!='Model Info'">
                             <i class="ace-icon fa fa-arrow-left"></i>
                             Prev
