new model list page update

--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -883,6 +883,12 @@ span.input-icon {
   color: black !important;
 }
 
+.callout.callout-warning {
+  background-color: #fefbed !important;
+  border-color: #f1e7bc !important;
+  color: black !important;
+}
+
 ul.messenger-theme-ice .messenger-message{
   color:#666667 !important;
 }
@@ -946,4 +952,10 @@ Angular 1.2.0 Animation
 }
 .model-design .btn-box-tool{
   font-size: 13px !important;
+}
+
+.models-main {
+  min-height: 100%;
+  background-color: #ecf0f5;
+  z-index: 800;
 }
