--- a/webapp/app/partials/models/models.html
+++ b/webapp/app/partials/models/models.html
@@ -18,7 +18,7 @@
 <div class="row models-main"  style="padding-top:10px;">
     <!--table_tree-->
 
-    <div class="col-xs-2">
+    <div class="col-xs-3">
         <tabset class="nav-tabs-custom">
             <tab heading="Models" select="toggleTab(true);">
                 <div ng-include src="'partials/models/models_tree.html'"></div>
@@ -28,30 +28,21 @@
             </tab>
         </tabset>
     </div>
-
-    <div ng-show="showModels" class="col-xs-2">
-        <div class="box box-primary">
-            <div class="box-header">
-                Cubes
-            </div>
-            <div class="box-body table-responsive no-padding">
-                <ul class="nav nav-list nav-pills nav-stacked">
-                    <li ng-repeat="cube in selectedCubes">
-                         <a>
-                             <span>{{cube.name}}</span>
-                         </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div  ng-show="showModels"  class="col-xs-8 models-main">
+    <div  ng-show="showModels&&!cubeSelected"  class="col-xs-9 models-main">
         <div ng-include src="'partials/models/model_detail.html'"></div>
     </div>
+    <div  ng-show="showModels&&cubeSelected"  class="col-xs-9 models-main">
+        <div ng-include src="'partials/cubes/cube_detail.html'"></div>
+    </div>
 
-    <div ng-show="!showModels" class="col-xs-10 models-main">
+    <div ng-show="!showModels" class="col-xs-9 models-main">
         <div ng-include src="'partials/tables/table_detail.html'"></div>
     </div>
 
 
 </div>
+
+<div ng-include="'partials/jobs/job_submit.html'"></div>
+<div ng-include="'partials/jobs/job_refresh.html'"></div>
+<div ng-include="'partials/jobs/job_merge.html'"></div>
+<div ng-include="'partials/projects/project_create.html'"></div>
