--- a/webapp/app/partials/cubes/cube_schema.html
+++ b/webapp/app/partials/cubes/cube_schema.html
@@ -16,7 +16,7 @@
 * limitations under the License.
 -->
 
-<div class="box box-primary">
+<div class="box box-primary box-2px">
     <div class="box-header widget-header-blue widget-header-flat">
         <h4 class="box-title text-info">Cube Designer</h4>
     </div>
