new models page update

--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -960,3 +960,7 @@ Angular 1.2.0 Animation
 .box-2px{
   border-top:solid 2px #3c8dbc !important;
 }
+
+treecontrol{
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
