--- a/webapp/app/partials/models/models_tree.html
+++ b/webapp/app/partials/models/models_tree.html
@@ -35,9 +35,9 @@
         <abn-tree
                 tree-data         = "models_treedata"
                 tree-control      = "my_tree"
-                icon-leaf         = "fa fa-cube"
-                icon-expand       = "fa fa-plus"
-                icon-collapse     = "fa fa-minus"
+                icon-leaf         = "fa fa-cubes"
+                icon-expand       = "fa fa-star"
+                icon-collapse     = "fa fa-star-o"
                 expand-level      = "2"
                 initial-selection = "">
             ></abn-tree>
