--- a/webapp/app/partials/tables/table_detail.html
+++ b/webapp/app/partials/tables/table_detail.html
@@ -1,5 +1,5 @@
 <div  ng-controller="SourceMetaCtrl" class="nav-tabs-custom">
-    <div class="col-xs-12">
+    <div class="col-xs-12" ng-show="models_treedata.length&&tableModel.selectedSrcTable.name">
         <h3 class="text-info">Table Schema:{{ tableModel.selectedSrcTable.name}}</h3>
         <div class="tabbable nav-tabs-custom">
             <ul class="nav nav-tabs">
@@ -119,6 +119,36 @@
             </div>
         </div>
     </div>
+
+
+    <!--show load hive table tip when no models list-->
+    <div ng-show="!models_treedata.length" style="margin-top:40px;">
+        <div class="box box-primary">
+            <div class="box-header with-border">
+                <i class="fa fa-bullhorn"></i>
+                <h3 class="box-title">No tables</h3>
+            </div>
+            <div class="box-body">
+                <div>
+                    <a tooltip="Load Hive Table" href="javascript:void(0);" ng-if="userService.hasRole('ROLE_MODELER')" ng-click="openModal()">Click here to load your hive table</a>
+                </div>
+            </div><!-- /.box-body -->
+        </div>
+    </div>
+
+    <!--show load hive table tip when no models list-->
+    <div ng-show="models_treedata.length&&!tableModel.selectedSrcTable.name" style="margin-top:40px;">
+        <div class="box box-primary">
+            <div class="box-header with-border">
+                <i class="fa fa-bullhorn"></i>
+                <h3 class="box-title">No table selected</h3>
+            </div>
+            <div class="box-body">
+                Select your table
+            </div><!-- /.box-body -->
+        </div>
+    </div>
+
 
     <script type="text/ng-template" id="addHiveTable.html">
         <div class="modal-header">
