use abn-tree replace treecontrol

--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -961,6 +961,6 @@ Angular 1.2.0 Animation
   border-top:solid 2px #3c8dbc !important;
 }
 
-treecontrol{
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+.abn-tree i.indented{
+  font-size:14px !important;
 }
