--- a/webapp/app/partials/tables/source_table_tree.html
+++ b/webapp/app/partials/tables/source_table_tree.html
@@ -37,7 +37,7 @@
         <abn-tree
                 tree-data         = "tableModel.selectedSrcDb"
                 tree-control      = "my_tree"
-                icon-leaf         = "fa fa-table"
+                icon-leaf         = "fa fa-columns"
                 icon-expand       = "fa fa-database"
                 icon-collapse     = "fa fa-database"
                 expand-level      = "3">
